*0.9.1*

* Rails 2.3 compatibility

*0.9.0*

* Add association stubbing with mocha

  ActiveRecord::Base.disconnect! :stub_associations => true

* Add option to no-op instead of raise.

  ActiveRecord::Base.disconnect! :strategy => :noop
  or
  ActiveRecord::Base.disconnect! :strategy => :raise
  
* Implemented as a connection adapter

*0.4.1* (December 10th, 2007)

* Stub caching for compatibility with ActionController::Caching::SqlCache in Rails 2.

*0.4.0* (December 9th, 2007)

* Rails 2.0 compatibility.

*0.3.0* (August 22nd, 2007)

* Works with models using non-conventional table names.

*0.2.0* (August 16th, 2007)

* Cache columns based on schema.rb

*0.1.0* (August 15th, 2007)

* Converted plugin into a gem.
* No longer depend on Rake task to dump and cache columns.